--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,7 @@ dependencies:
   csv: ^6.0.0
   shared_preferences: ^2.3.3
   url_launcher: ^6.3.1
-  external_app_launcher: ^4.0.1
+  # external_app_launcher: ^4.0.1
   flutter_launcher_icons: ^0.14.2
 
 dev_dependencies:
